--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -19,7 +19,7 @@
              class="col-sm-2 col-form-label">Username:</label>
       <div class="col-sm-10">
         <input type="text" class="form-control" id="userName"
-               name="username" placeholder="Username" minlength="3" maxlength="30" required>
+               name="username" placeholder="USERNAME" minlength="3" maxlength="30" required>
       </div>
     </div>
     <div class="form-group row my-4">
@@ -27,12 +27,15 @@
              class="col-sm-2 col-form-label">Password: </label>
       <div class="col-sm-10">
         <input type="password" class="form-control" id="password"
-               name="password" placeholder="Password" minlength="6" maxlength="30" required>
+               name="password" placeholder="PASSWORD" minlength="6" maxlength="30" required>
       </div>
     </div>
-    <a href="/register" class="stretched-link">Register</a>
-    <button id="login" class="w-100 btn btn-lg btn-primary" type="submit">Login</button>
+    <button id="login" class="w-100 btn btn-lg btn-primary" type="submit">LOG IN</button>
   </form>
+
+  <div class="text-center">
+    <a href="/register">Register</a>
+  </div>
 
 </main>
 
