--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -40,7 +40,7 @@
 </main>
 
 <script src="/webjars/jquery/jquery.min.js"></script>
-<script src="/webjars/bootstrap/4.5.3/js/bootstrap.min.js"></script>
+<script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
 
 </body>
 </html>
