--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -47,7 +47,7 @@
     </div>
 
     <div class="form-group row my-4">
-      <label id="labelGenger" for="gender"
+      <label id="labelGender" for="gender"
              class="col-sm-2 col-form-label">Gender: </label>
       <div class="col-sm-10">
         <select class="form-control" id="gender" name="gender">
@@ -66,13 +66,13 @@
       </div>
     </div>
 
-    <button id="register" class="w-100 btn btn-success" type="submit">REGISTER NOW </button>
+    <button id="register" class="w-100 btn btn-success" type="submit">REGISTER NOW</button>
   </form>
 
 </main>
 
 
 <script src="/webjars/jquery/jquery.min.js"></script>
-<script src="/webjars/bootstrap/4.5.3/js/bootstrap.min.js"></script>
+<script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
 </body>
 </html>
