add adddMedicine page

--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -15,7 +15,7 @@
     <a href="/login">Log In</a>
   </div>
 
-  <form action="/register" method="POST" name="loginForm">
+  <form action="/register" method="POST" name="registerForm">
 
     <h1 class="h1" id="title">Register</h1>
 
