--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -11,7 +11,7 @@
   <div class="container d-flex flex-wrap">
     <ul class="nav me-auto">
       <li class="nav-item"><a
-          href="/home"
+          href="/adminhome"
           class="nav-link link-dark px-2 active" aria-current="page">Home</a>
       </li>
       <li class="nav-item"><a
@@ -34,7 +34,7 @@
 
   <div>
 
-    <a href="#" role="button" id=”addMedicine” class="btn btn-outline-primary">Add Medicine
+    <a href="/addMedicine" role="button" id=”addMedicine” class="btn btn-outline-primary">Add Medicine
       Details </a>
     <a href="/adminViewDonations" role="button" id=”viewAllDonateData”
        class="btn btn-outline-primary">View All User Donate Data </a>
