--- a/src/main/resources/templates/admin/viewDonations.html
+++ b/src/main/resources/templates/admin/viewDonations.html
@@ -11,7 +11,7 @@
   <div class="container d-flex flex-wrap">
     <ul class="nav me-auto">
       <li class="nav-item"><a
-          href="/home"
+          href="/adminhome"
           class="nav-link link-dark px-2 active" aria-current="page">Home</a>
       </li>
       <li class="nav-item"><a
