add viewRequests page

--- a/src/main/resources/templates/admin/addMedicine.html
+++ b/src/main/resources/templates/admin/addMedicine.html
@@ -63,6 +63,8 @@
     <button id="medicineSubmit" class="w-100 btn btn-success" type="submit">ADD MEDICINE</button>
   </form>
 
+  <div class="alert alert-danger" role="alert" id="message">Invalid Input</div>
+
 </main>
 
 
