--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -34,11 +34,11 @@
 
   <div>
 
-    <a href="/addMedicine" role="button" id=”addMedicine” class="btn btn-outline-primary">Add Medicine
+    <a href="/addmedicine" role="button" id=”addMedicine” class="btn btn-outline-primary">Add Medicine
       Details </a>
     <a href="/adminViewDonations" role="button" id=”viewAllDonateData”
        class="btn btn-outline-primary">View All User Donate Data </a>
-    <a href="#" role="button" id=”viewAllRequestData” class="btn btn-outline-primary">View All User
+    <a href="/adminViewRequests" role="button" id=”viewAllRequestData” class="btn btn-outline-primary">View All User
       Request Data </a>
 
   </div>
