--- a/src/main/resources/templates/admin/viewRequests.html
+++ b/src/main/resources/templates/admin/viewRequests.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>View All Users Donated Medicine Details</title>
+  <title>All Request Details</title>
   <link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
 </head>
 <body>
@@ -26,7 +26,7 @@
 
 <header class="py-3 mb-4 border-bottom">
   <div class="container d-flex justify-content-around">
-    <h5 class="h5">All Donor Details </h5>
+    <h5 class="h5">All Request Details</h5>
   </div>
 </header>
 
@@ -64,6 +64,7 @@
     </tr>
     </tbody>
   </table>
+
 </main>
 
 
