add viewDonateMedicine (user)

--- a/src/main/resources/templates/user/viewDonateMedicine.html
+++ b/src/main/resources/templates/user/viewDonateMedicine.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>All Request Details</title>
+  <title>Medicine Donate Details</title>
   <link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
 </head>
 <body>
@@ -26,7 +26,7 @@
 
 <header class="py-3 mb-4 border-bottom">
   <div class="container d-flex justify-content-around">
-    <h5 class="h5">All Request Details</h5>
+    <h5 class="h5">Medicine Donate Details</h5>
   </div>
 </header>
 
@@ -37,10 +37,10 @@
     <tr>
       <th scope="col">Medicine Category</th>
       <th scope="col">Medicine Name</th>
-      <th scope="col">Medicine Quantity</th>
-      <th scope="col">Requester Name</th>
-      <th scope="col">Delivered Address </th>
-      <th scope="col">Requested Date</th>
+      <th scope="col">Donate Quantity</th>
+      <th scope="col">Donor Name</th>
+      <th scope="col">Pickup Address</th>
+      <th scope="col">Donated Date</th>
     </tr>
     </thead>
 
@@ -50,8 +50,8 @@
       <td id="medName"></td>
       <td id="medQty"></td>
       <td id="reqName"></td>
-      <td id="delAddress"></td>
-      <td id="reqDate"></td>
+      <td id="pickAddress"></td>
+      <td id="donatedDate"></td>
     </tr>
 
     <tr>
@@ -64,8 +64,8 @@
     </tr>
     </tbody>
   </table>
-
 </main>
+
 
 <script src="/webjars/jquery/jquery.min.js"></script>
 <script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
