--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -32,14 +32,14 @@
 
 <main class="container">
 
-  <div>
+  <div class="mb-5">
 
-    <a href="/addmedicine" role="button" id=”addMedicine” class="btn btn-outline-primary">Add Medicine
-      Details </a>
+    <a href="/addmedicine" role="button" id=”addMedicine” class="btn btn-outline-primary">Add
+      Medicine Details </a>
     <a href="/adminViewDonations" role="button" id=”viewAllDonateData”
        class="btn btn-outline-primary">View All User Donate Data </a>
-    <a href="/adminViewRequests" role="button" id=”viewAllRequestData” class="btn btn-outline-primary">View All User
-      Request Data </a>
+    <a href="/adminViewRequests" role="button" id=”viewAllRequestData”
+       class="btn btn-outline-primary">View All User Request Data </a>
 
   </div>
 
