--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>All Request Details</title>
+  <title>User Home</title>
   <link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
 </head>
 <body>
@@ -26,11 +26,22 @@
 
 <header class="py-3 mb-4 border-bottom">
   <div class="container d-flex justify-content-around">
-    <h5 class="h5">All Request Details</h5>
+    <h5 class="h5">Available Medicine Details </h5>
   </div>
 </header>
 
 <main class="container">
+
+  <div class="mb-5">
+
+    <a href="/userRequestMedicine" role="button" id=”requestMedicine” class="btn btn-outline-primary">Request
+      Medicine</a>
+    <a href="/userDonateMedicine" role="button" id=”donateMedicine” class="btn btn-outline-primary">Donate
+      Medicine</a>
+    <a href="/userViewDonateMedicine" role="button" id=”viewDonateMedicine” class="btn btn-outline-primary">View Donate
+      Medicine</a>
+
+  </div>
 
   <table class="table table-bordered">
     <thead>
@@ -39,7 +50,7 @@
       <th scope="col">Medicine Name</th>
       <th scope="col">Medicine Quantity</th>
       <th scope="col">Requester Name</th>
-      <th scope="col">Delivered Address </th>
+      <th scope="col">Delivered Address</th>
       <th scope="col">Requested Date</th>
     </tr>
     </thead>
@@ -66,6 +77,7 @@
   </table>
 
 </main>
+
 
 <script src="/webjars/jquery/jquery.min.js"></script>
 <script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
