--- a/src/main/resources/templates/user/requestMedicine.html
+++ b/src/main/resources/templates/user/requestMedicine.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Donate Medicine </title>
+  <title>Request and Donate  </title>
   <link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
 </head>
 <body>
@@ -27,23 +27,36 @@
 <main id="main" class="container my-5">
   <form action="/" method="POST" name="donateForm">
 
-    <h1 class="h1" id="title">Donate Medicine</h1>
+    <h1 class="h1" id="title">Request and Donate  </h1>
 
     <div class="form-group row my-4">
-      <label id="labelMedCategory" for="medCategory"
-             class="col-sm-2 col-form-label">Medicine Category:</label>
+      <label id="labelMedCategory" for="medCategory "
+             class="col-sm-2 col-form-label">Select Category:</label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" id="medCategory"
-               name="medCategory" placeholder="Medicine Category" minlength="4" maxlength="30" required>
+        <select class="form-control" id="medCategory " name="medCategory ">
+          <option value="Male" selected>Male</option>
+          <option value="Female">Female</option>
+        </select>
       </div>
     </div>
 
     <div class="form-group row my-4">
-      <label id="labelDonateMedName" for="medCategory"
-             class="col-sm-2 col-form-label">Medicine Name:</label>
+      <label id="labelMedName" for="medName "
+             class="col-sm-2 col-form-label">Select Medicine Name:</label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" id="donateMedName"
-               name="donateMedName" placeholder="Medicine Name" minlength="4" maxlength="30" required>
+        <select class="form-control" id="medName " name="medName ">
+          <option value="Male" selected>Male</option>
+          <option value="Female">Female</option>
+        </select>
+      </div>
+    </div>
+
+    <div class="form-group row my-4">
+      <label id="labelAvailQuantity" for="availQuantity"
+             class="col-sm-2 col-form-label">Available Quantity:</label>
+      <div class="col-sm-10">
+        <input type="number" class="form-control" id="availQuantity"
+               name="availQuantity" disabled>
       </div>
     </div>
 
@@ -56,7 +69,7 @@
       </div>
     </div>
 
-    <button id="submitDonate" class="w-100 btn btn-lg btn-primary" type="submit">Submit</button>
+    <button id="submitRequest" class="w-100 btn btn-lg btn-primary" type="submit">Submit</button>
   </form>
 
 </main>
