--- a/src/main/resources/templates/admin/addMedicine.html
+++ b/src/main/resources/templates/admin/addMedicine.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:th="http://www.thymeleaf.org">
 <head>
   <meta charset="UTF-8">
   <title>Add Medicine Details</title>
@@ -7,22 +8,7 @@
 </head>
 <body>
 
-<nav class="py-2 bg-light border-bottom">
-  <div class="container d-flex flex-wrap">
-    <ul class="nav me-auto">
-      <li class="nav-item"><a
-          href="/adminhome"
-          class="nav-link link-dark px-2 active" aria-current="page">Home</a>
-      </li>
-      <li class="nav-item"><a
-          href="/logout"
-          class="nav-link link-dark px-2">Logout</a></li>
-      <li class="nav-item">
-        <label class="nav-link link-dark px-2" id="welcomeUserName">Logged in User: ...</label>
-      </li>
-    </ul>
-  </div>
-</nav>
+<div th:replace="fragments/navbar :: navbar"></div>
 
 <header class="py-3 mb-4 border-bottom">
   <div class="container d-flex justify-content-around">
@@ -38,7 +24,8 @@
              class="col-sm-2 col-form-label">Medicine Name:</label>
       <div class="col-sm-10">
         <input type="text" class="form-control" id="medicineName"
-               name="medicineName" placeholder="Medicine Name" minlength="4" maxlength="30" required>
+               name="medicineName" placeholder="Medicine Name" minlength="4" maxlength="30"
+               required>
       </div>
     </div>
 
@@ -47,7 +34,8 @@
              class="col-sm-2 col-form-label">Medicine Category:</label>
       <div class="col-sm-10">
         <input type="text" class="form-control" id="medicineCategory"
-                 name="medicineCategory" placeholder="Medicine Category" minlength="4" maxlength="30" required>
+               name="medicineCategory" placeholder="Medicine Category" minlength="4" maxlength="30"
+               required>
       </div>
     </div>
 
