--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -15,16 +15,20 @@
     <a href="/login">Log In</a>
   </div>
 
-  <form action="/register" method="POST" name="registerForm">
+  <form th:action="@{/register}" th:object="${user}" action="#" method="post">
 
     <h1 class="h1" id="title">Register</h1>
+
+    <div th:if="${#fields.hasErrors()}">
+      <span id="message">Invalid Input</span>
+    </div>
 
     <div class="form-group row my-4">
       <label id="labelUserName" for="userName"
              class="col-sm-2 col-form-label">Username:</label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" id="userName"
-               name="username" placeholder="Username" minlength="3" maxlength="30" required>
+        <input type="text" class="form-control" id="userName" minlength="5" maxlength="30"
+               name="username"  placeholder="Username" th:field="*{username}">
       </div>
     </div>
 
@@ -33,7 +37,7 @@
              class="col-sm-2 col-form-label">Password: </label>
       <div class="col-sm-10">
         <input type="password" class="form-control" id="password"
-               name="password" placeholder="Password" minlength="6" maxlength="30" required>
+               name="password" placeholder="Password" minlength="5" maxlength="30" th:field="*{password}">
       </div>
     </div>
 
@@ -42,7 +46,7 @@
              class="col-sm-2 col-form-label">Age: </label>
       <div class="col-sm-10">
         <input type="number" class="form-control" id="age"
-               name="age" placeholder="Age" min="18" max="100" required>
+               name="age" placeholder="Age" min="18" max="100" th:field="*{age}">
       </div>
     </div>
 
@@ -50,7 +54,7 @@
       <label id="labelGender" for="gender"
              class="col-sm-2 col-form-label">Gender: </label>
       <div class="col-sm-10">
-        <select class="form-control" id="gender" name="gender">
+        <select class="form-control" id="gender" name="gender" th:field="*{gender}">
           <option value="Male" selected>Male</option>
           <option value="Female">Female</option>
         </select>
@@ -62,7 +66,7 @@
              class="col-sm-2 col-form-label">Address:</label>
       <div class="col-sm-10">
         <input type="text" class="form-control" id="address"
-               name="address" placeholder="Address" minlength="6" maxlength="30" required>
+               name="address" placeholder="Address" minlength="6" maxlength="30" th:field="*{address}">
       </div>
     </div>
 
