--- a/src/main/resources/templates/admin/addMedicine.html
+++ b/src/main/resources/templates/admin/addMedicine.html
@@ -17,7 +17,11 @@
 </header>
 
 <main id="main" class="container my-5">
-  <form action="" method="POST" name="addMedicineForm">
+  <form th:action="@{/addmedicine}" th:object="${medicine}" action="#" method="post">
+
+    <div th:if="${#fields.hasErrors()}">
+      <span id="message">Invalid Input</span>
+    </div>
 
     <div class="form-group row my-4">
       <label id="labelMedicineName" for="medicineName"
@@ -25,7 +29,7 @@
       <div class="col-sm-10">
         <input type="text" class="form-control" id="medicineName"
                name="medicineName" placeholder="Medicine Name" minlength="4" maxlength="30"
-               required>
+               th:field="*{name}">
       </div>
     </div>
 
@@ -35,7 +39,7 @@
       <div class="col-sm-10">
         <input type="text" class="form-control" id="medicineCategory"
                name="medicineCategory" placeholder="Medicine Category" minlength="4" maxlength="30"
-               required>
+               th:field="*{category}">
       </div>
     </div>
 
@@ -44,14 +48,13 @@
              class="col-sm-2 col-form-label">Medicine Quantity:</label>
       <div class="col-sm-10">
         <input type="number" class="form-control" id="medicineQuantity"
-               name="medicineQuantity" placeholder="Medicine Quantity" max="9999" required>
+               name="medicineQuantity" placeholder="Medicine Quantity" max="9999"
+               th:field="*{quantity}">
       </div>
     </div>
 
     <button id="medicineSubmit" class="w-100 btn btn-success" type="submit">ADD MEDICINE</button>
   </form>
-
-  <div class="alert alert-danger" role="alert" id="message">Invalid Input</div>
 
 </main>
 
