--- a/src/main/resources/templates/admin/addMedicine.html
+++ b/src/main/resources/templates/admin/addMedicine.html
@@ -48,7 +48,7 @@
              class="col-sm-2 col-form-label">Medicine Quantity:</label>
       <div class="col-sm-10">
         <input type="number" class="form-control" id="medicineQuantity"
-               name="medicineQuantity" placeholder="Medicine Quantity" max="9999"
+               name="medicineQuantity" placeholder="Medicine Quantity" min="1" max="9999"
                th:field="*{quantity}">
       </div>
     </div>
