--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -5,8 +5,12 @@
 <nav th:fragment="navbar" class="py-2 bg-light border-bottom">
   <div class="container d-flex flex-wrap">
     <ul class="nav me-auto">
-      <li class="nav-item"><a
+      <li th:if="${session.user.username.equals('Admin')}" class="nav-item"><a
           href="/adminhome"
+          class="nav-link link-dark px-2 active" aria-current="page">Home</a>
+      </li>
+      <li th:if="${!session.user.username.equals('Admin')}" class="nav-item"><a
+          href="/userhome"
           class="nav-link link-dark px-2 active" aria-current="page">Home</a>
       </li>
       <li class="nav-item"><a
