--- a/src/main/resources/templates/admin/viewRequests.html
+++ b/src/main/resources/templates/admin/viewRequests.html
@@ -31,16 +31,16 @@
     </thead>
 
     <tbody>
-    <tr>
-      <td id="medCategory"></td>
-      <td id="medName"></td>
-      <td id="medQty"></td>
-      <td id="reqName"></td>
-      <td id="delAddress"></td>
-      <td id="reqDate"></td>
+    <tr th:each="donate, loop : ${requestsList}">
+      <td th:id="medCategory+${loop.index + 1}"  th:text="${donate.category}"></td>
+      <td th:id="medName+${loop.index + 1}" th:text="${donate.name}"></td>
+      <td th:id="medQty+${loop.index + 1}" th:text="${donate.quantity}"></td>
+      <td th:id="reqName+${loop.index + 1}" th:text="${donate.username}"></td>
+      <td th:id="delAddress+${loop.index + 1}" th:text="${donate.address}"></td>
+      <td th:id="reqDate+${loop.index + 1}" th:text="${donate.requestedDate}"></td>
     </tr>
 
-    <tr>
+    <tr th:if="${#lists.isEmpty(requestsList)}">
       <td colspan="6">
         <div class="text-center">
           <label id=”noData”>No data found</label>
