--- a/src/main/resources/templates/user/home.html
+++ b/src/main/resources/templates/user/home.html
@@ -44,16 +44,16 @@
     </thead>
 
     <tbody>
-    <tr>
-      <td id="medCategory"></td>
-      <td id="medName"></td>
-      <td id="medQty"></td>
-      <td id="reqName"></td>
-      <td id="delAddress"></td>
-      <td id="reqDate"></td>
+    <tr th:each="request, loop : ${requestList}">
+      <td th:id="medCategory+${loop.index + 1}"  th:text="${request.category}"></td>
+      <td th:id="medName+${loop.index + 1}" th:text="${request.name}"></td>
+      <td th:id="medQty+${loop.index + 1}" th:text="${request.quantity}"></td>
+      <td th:id="reqName+${loop.index + 1}" th:text="${request.username}"></td>
+      <td th:id="delAddress+${loop.index + 1}" th:text="${request.address}"></td>
+      <td th:id="reqDate+${loop.index + 1}" th:text="${#dates.format(request.requestedDate, 'dd-MM-yyyy')}"></td>
     </tr>
 
-    <tr>
+    <tr th:if="${#lists.isEmpty(requestList)}">
       <td colspan="6">
         <div class="text-center">
           <label id=”noData”>No data found</label>
