--- a/src/main/resources/templates/admin/viewRequests.html
+++ b/src/main/resources/templates/admin/viewRequests.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>All Request Details</title>
-  <link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
+  <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.1.3/css/bootstrap.min.css}">
 </head>
 <body>
 
@@ -46,15 +46,14 @@
           <label id=”noData”>No data found</label>
         </div>
       </td>
-
     </tr>
+
     </tbody>
   </table>
 
 </main>
 
-<script src="/webjars/jquery/jquery.min.js"></script>
-<script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
-
+<script th:src="@{/webjars/jquery/3.6.0/jquery.min.js}"></script>
+<script th:src="@{/webjars/bootstrap/5.1.3/js/bootstrap.min.js}"></script>
 </body>
 </html>
