--- a/src/main/resources/templates/user/donateMedicine.html
+++ b/src/main/resources/templates/user/donateMedicine.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Donate Medicine </title>
-  <link href="/webjars/bootstrap/css/bootstrap.min.css" rel="stylesheet"/>
+  <link rel="stylesheet" th:href="@{/webjars/bootstrap/5.1.3/css/bootstrap.min.css}">
 </head>
 <body>
 
@@ -49,8 +49,7 @@
 
 </main>
 
-<script src="/webjars/jquery/jquery.min.js"></script>
-<script src="/webjars/bootstrap/js/bootstrap.min.js"></script>
-
+<script th:src="@{/webjars/jquery/3.6.0/jquery.min.js}"></script>
+<script th:src="@{/webjars/bootstrap/5.1.3/js/bootstrap.min.js}"></script>
 </body>
 </html>
