--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -44,6 +44,6 @@
 
 <script th:src="@{/webjars/jquery/3.6.0/jquery.min.js}"></script>
 <script th:src="@{/webjars/bootstrap/5.1.3/js/bootstrap.min.js}"></script>
-<script th:src="@{/js/main.js}" type="text/javascript"></script>
+<script th:src="@{/resources/static/main.js}" type="text/javascript"></script>
 </body>
 </html>
