--- a/src/main/resources/templates/admin/viewRequests.html
+++ b/src/main/resources/templates/admin/viewRequests.html
@@ -43,7 +43,7 @@
     <tr th:if="${#lists.isEmpty(requestsList)}">
       <td colspan="6">
         <div class="text-center">
-          <label id=”noData”>No data found</label>
+          <label id="noData">No data found</label>
         </div>
       </td>
     </tr>
