--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -6,15 +6,15 @@
   <div class="container d-flex flex-wrap">
     <ul class="nav me-auto">
       <li th:if="${session.user.username.equals('Admin')}" class="nav-item"><a
-          href="/adminhome"
+          th:href="@{/adminhome}"
           class="nav-link link-dark px-2 active" aria-current="page">Home</a>
       </li>
       <li th:if="${!session.user.username.equals('Admin')}" class="nav-item"><a
-          href="/userhome"
+          th:href="@{/userhome}"
           class="nav-link link-dark px-2 active" aria-current="page">Home</a>
       </li>
       <li class="nav-item"><a
-          href="/logout"
+          th:href="@{/logout}"
           class="nav-link link-dark px-2">Logout</a></li>
       <li class="nav-item">
         <label class="nav-link link-dark px-2" id="welcomeUserName">
