--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -12,7 +12,7 @@
 <main id="main" class="container my-5">
 
   <div class="text-center">
-    <a href="/login">Log In</a>
+    <a th:href="@{/login}">Log In</a>
   </div>
 
   <form th:action="@{/register}" th:object="${user}" action="#" method="post">
@@ -27,7 +27,7 @@
       <label id="labelUserName" for="userName"
              class="col-sm-2 col-form-label">Username:</label>
       <div class="col-sm-10">
-        <input type="text" class="form-control" id="userName" minlength="5" maxlength="30"
+        <input type="text" class="form-control" id="userName" minlength="3" maxlength="30"
                name="username"  placeholder="Username" th:field="*{username}">
       </div>
     </div>
