--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -20,12 +20,20 @@
 
   <div class="mb-5">
 
-    <a href="/addmedicine" role="button" id=”addMedicine” class="btn btn-outline-primary">Add
-      Medicine Details </a>
-    <a href="/adminViewDonations" role="button" id=”viewAllDonateData”
-       class="btn btn-outline-primary">View All User Donate Data </a>
-    <a href="/adminViewRequests" role="button" id=”viewAllRequestData”
-       class="btn btn-outline-primary">View All User Request Data </a>
+    <form th:action="@{/addmedicine}" method="get" action="#">
+        <button id="addMedicine" th:id="addMedicine" name="addMedicine" th:name="addMedicine"
+                class="btn btn-outline-primary">Add Medicine Details</button>
+    </form>
+
+    <form th:action="@{/adminViewDonations}" method="get" action="#">
+    <button id="viewAllDonateData" th:id="viewAllDonateData" name="viewAllDonateData" th:name="viewAllDonateData"
+            class="btn btn-outline-primary">View All User Donate Data </button>
+    </form>
+
+    <form th:action="@{/adminViewRequests}" method="get" action="#">
+      <button id="viewAllRequestData" th:id="viewAllRequestData" name="viewAllRequestData" th:name="viewAllRequestData"
+              class="btn btn-outline-primary">View All User Request Data </button>
+    </form>
 
   </div>
 
@@ -50,7 +58,7 @@
     <tr th:if="${#lists.isEmpty(medicineList)}">
       <td colspan="6">
         <div class="text-center">
-          <label id=”noData”>No medicines found</label>
+          <label id="noData">No medicines found</label>
         </div>
       </td>
     </tr>
