--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,9 +11,9 @@
 
 <main id="main" class="container my-5">
 
-  <div id="message" align="center" th:text="${errorMessage}"/>
+  <div id="error" align="center" th:text="${errorMessage}"/>
 
-  <form action="/login" method="POST" name="loginForm">
+  <form th:action="@{/login}" method="post" action="#" name="loginForm">
 
     <h1 class="h1" id="title">Login</h1>
 
@@ -21,8 +21,9 @@
       <label id="labelUserName" for="userName"
              class="col-sm-2 col-form-label">Username:</label>
       <div class="col-sm-10">
+        <p th:text="${#httpServletRequest.getContextPath()}"></p>
         <input type="text" class="form-control" id="userName"
-               name="username" placeholder="USERNAME" minlength="3" maxlength="30" required>
+               name="username" placeholder="USERNAME" minlength="3" maxlength="30">
       </div>
     </div>
     <div class="form-group row my-4">
@@ -30,14 +31,14 @@
              class="col-sm-2 col-form-label">Password: </label>
       <div class="col-sm-10">
         <input type="password" class="form-control" id="password"
-               name="password" placeholder="PASSWORD" minlength="6" maxlength="30" required>
+               name="password" placeholder="PASSWORD" minlength="6" maxlength="30">
       </div>
     </div>
     <button id="login" class="w-100 btn btn-lg btn-primary" type="submit">LOG IN</button>
   </form>
 
   <div class="text-center">
-    <a href="/register">Register</a>
+    <a id="register" name="register" th:href="@{/register}">Register</a>
   </div>
 
 </main>
