--- a/src/main/resources/templates/user/donateMedicine.html
+++ b/src/main/resources/templates/user/donateMedicine.html
@@ -15,6 +15,10 @@
 
     <h1 class="h1" id="title">Donate Medicine</h1>
 
+    <div th:if="${#fields.hasErrors()}">
+      <span id="message">Invalid Input</span>
+    </div>
+
     <div class="form-group row my-4">
       <label id="labelMedCategory" for="medCategory"
              class="col-sm-2 col-form-label">Medicine Category:</label>
