--- a/src/main/resources/templates/user/requestMedicine.html
+++ b/src/main/resources/templates/user/requestMedicine.html
@@ -11,29 +11,31 @@
 <div th:replace="fragments/navbar :: navbar"></div>
 
 <main id="main" class="container my-5">
-  <form action="/" method="POST" name="donateForm">
+
+  <form action="/userRequestMedicine" method="post">
 
     <h1 class="h1" id="title">Request and Donate </h1>
 
     <div class="form-group row my-4">
-      <label id="labelMedCategory" for="medCategory "
+      <label id="labelMedCategory" for="medCategory"
              class="col-sm-2 col-form-label">Select Category:</label>
       <div class="col-sm-10">
-        <select class="form-control" id="medCategory " name="medCategory ">
-          <option value="Male" selected>Male</option>
-          <option value="Female">Female</option>
+        <select class="form-control" id="medCategory" th:onchange="handleCategory(this)">
+          <option
+              th:each="category : ${medicineCategories}"
+              th:value="${category}"
+              th:text="${category}"
+          ></option>
         </select>
       </div>
     </div>
 
     <div class="form-group row my-4">
-      <label id="labelMedName" for="medName "
+      <label id="labelMedName" for="medName"
              class="col-sm-2 col-form-label">Select Medicine Name:</label>
       <div class="col-sm-10">
-        <select class="form-control" id="medName " name="medName ">
-          <option value="Male" selected>Male</option>
-          <option value="Female">Female</option>
-        </select>
+        <select class="form-control" id="medName" name="medName"
+                th:onchange="handleQuantityAvailable(this);"> </select>
       </div>
     </div>
 
@@ -51,7 +53,7 @@
              class="col-sm-2 col-form-label">Quantity:</label>
       <div class="col-sm-10">
         <input type="number" class="form-control" id="quantity"
-               name="quantity" placeholder="Quantity" minlength="1" required>
+               name="quantity" placeholder="Quantity" min="1">
       </div>
     </div>
 
@@ -62,5 +64,46 @@
 
 <script th:src="@{/webjars/jquery/3.6.0/jquery.min.js}"></script>
 <script th:src="@{/webjars/bootstrap/5.1.3/js/bootstrap.min.js}"></script>
+<script th:inline="javascript">
+  const list = /*[[${medicineList}]]*/ [];
+  console.log(list)
+
+  const availQuantityInput = document.getElementById("availQuantity");
+
+  function removeAllOptions() {
+    $('#medName').empty();
+  }
+
+  function changeMaxLength(maxLength) {
+    const quantityInput = document.getElementById("quantity");
+    quantity.max = maxLength;
+  }
+
+  function handleCategory(event){
+      removeAllOptions();
+      const category = event.value;
+      const select = document.getElementById("medName");
+      for (let i = 0; i < list.length; i++) {
+        if(list[i].category == category) {
+          let option = document.createElement("option");
+          option.value = list[i].name;
+          option.innerHTML = list[i].name;
+          select.appendChild(option);
+        }
+      }
+  };
+
+  function handleQuantityAvailable(event){
+    const medicineNameSelected = event.value;
+
+    for (let i = 0; i < list.length; i++) {
+        if(list[i].name == medicineNameSelected) {
+          availQuantityInput.value = list[i].quantity;
+          changeMaxLength(list[i].quantity);
+        }
+      }
+  };
+
+</script>
 </body>
 </html>
