--- a/src/main/resources/templates/user/requestMedicine.html
+++ b/src/main/resources/templates/user/requestMedicine.html
@@ -12,15 +12,18 @@
 
 <main id="main" class="container my-5">
 
-  <form action="/userRequestMedicine" method="post">
+  <form th:action="@{/userRequestMedicine}" action="#" method="post">
 
     <h1 class="h1" id="title">Request and Donate </h1>
+    <div id="message" align="center" th:text="${errorMessage}"/>
+
 
     <div class="form-group row my-4">
       <label id="labelMedCategory" for="medCategory"
              class="col-sm-2 col-form-label">Select Category:</label>
       <div class="col-sm-10">
-        <select class="form-control" id="medCategory" th:onchange="handleCategory(this)">
+        <select class="form-control" id="medCategory" name="category"
+                th:onchange="handleCategory(this)">
           <option
               th:each="category : ${medicineCategories}"
               th:value="${category}"
@@ -34,7 +37,7 @@
       <label id="labelMedName" for="medName"
              class="col-sm-2 col-form-label">Select Medicine Name:</label>
       <div class="col-sm-10">
-        <select class="form-control" id="medName" name="medName"
+        <select class="form-control" id="medName" name="name"
                 th:onchange="handleQuantityAvailable(this);"> </select>
       </div>
     </div>
@@ -66,7 +69,7 @@
 <script th:src="@{/webjars/bootstrap/5.1.3/js/bootstrap.min.js}"></script>
 <script th:inline="javascript">
   const list = /*[[${medicineList}]]*/ [];
-  console.log(list)
+  console.log(list);
 
   const availQuantityInput = document.getElementById("availQuantity");
 
@@ -103,6 +106,9 @@
         }
       }
   };
+
+
+
 
 </script>
 </body>
